doc/changes/package_diffs/6.0.0/standard-EXASOL-7.1.0-without-python2.7/flavor_base_deps/python3_pip_packages_diff.md
<!-- markdown-link-check-disable -->

|    | Package                                                                              | Version in 5.0.0     | Version in 6.0.0     | Status   |
|---:|:-------------------------------------------------------------------------------------|:---------------------|:---------------------|:---------|
|  0 | protobuf                                                                             | 3.17.3               | 3.18.3               | UPDATED  |
|  1 | git+https://github.com/numpy/numpy.git@maintenance/1.19.x                            | No version specified |                      | REMOVED  |
|  2 | Pygments                                                                             |                      | 2.14.0               | NEW      |
|  3 | boto                                                                                 |                      | 2.49.0               | NEW      |
|  4 | cffi                                                                                 |                      | 1.15.0               | NEW      |
|  5 | cryptography                                                                         |                      | 37.0.4               | NEW      |
|  6 | docutils                                                                             |                      | 0.18.1               | NEW      |
|  7 | jinja2                                                                               |                      | 3.0.3                | NEW      |
|  8 | leveldb                                                                              |                      | 0.201                | NEW      |
|  9 | lxml                                                                                 |                      | 4.9.1                | NEW      |
| 10 | numpy                                                                                |                      | 1.21.3               | NEW      |
| 11 | paramiko                                                                             |                      | 2.9.2                | NEW      |
| 12 | pyOpenSSL                                                                            |                      | 21.0.0               | NEW      |
| 13 | pycparser                                                                            |                      | 2.21                 | NEW      |
| 14 | pycurl                                                                               |                      | 7.44.1               | NEW      |
| 15 | pyftpdlib                                                                            |                      | 1.5.6                | NEW      |
| 16 | pyodbc                                                                               |                      | 4.0.32               | NEW      |
| 17 | python-ldap                                                                          |                      | 3.4.0                | NEW      |
| 18 | redis                                                                                |                      | 4.1.0                | NEW      |
| 19 | requests                                                                             |                      | 2.27.1               | NEW      |
| 20 | roman                                                                                |                      | 3.3                  | NEW      |
| 21 | scikit-learn                                                                         |                      | 1.0.2                | NEW      |
| 22 | scipy                                                                                |                      | 1.6.2                | NEW      |
| 23 | setuptools                                                                           |                      | 65.5.1               | NEW      |
| 24 | simplejson                                                                           |                      | 3.17.6               | NEW      |
| 25 | ujson                                                                                |                      | 5.4.0                | NEW      |
| 26 | azure-batch                                                                          | 10.0.0               | 10.0.0               |          |
| 27 | azure-cosmos                                                                         | 4.2.0                | 4.2.0                |          |
| 28 | azure-eventgrid                                                                      | 4.3.0                | 4.3.0                |          |
| 29 | azure-eventhub                                                                       | 5.5.0                | 5.5.0                |          |
| 30 | azure-eventhub-checkpointstoreblob                                                   | 1.1.4                | 1.1.4                |          |
| 31 | azure-eventhub-checkpointstoreblob-aio                                               | 1.1.4                | 1.1.4                |          |
| 32 | azure-identity                                                                       | 1.6.0                | 1.6.0                |          |
| 33 | azure-keyvault                                                                       | 4.1.0                | 4.1.0                |          |
| 34 | azure-keyvault-certificates                                                          | 4.2.1                | 4.2.1                |          |
| 35 | azure-keyvault-keys                                                                  | 4.3.1                | 4.3.1                |          |
| 36 | azure-keyvault-secrets                                                               | 4.2.0                | 4.2.0                |          |
| 37 | azure-kusto-data                                                                     | 2.1.3                | 2.1.3                |          |
| 38 | azure-loganalytics                                                                   | 0.1.0                | 0.1.0                |          |
| 39 | azure-servicebus                                                                     | 7.3.0                | 7.3.0                |          |
| 40 | azure-storage-blob                                                                   | 12.8.1               | 12.8.1               |          |
| 41 | azure-storage-file-datalake                                                          | 12.4.0               | 12.4.0               |          |
| 42 | azure-storage-file-share                                                             | 12.5.0               | 12.5.0               |          |
| 43 | azure-storage-queue                                                                  | 12.1.6               | 12.1.6               |          |
| 44 | boto3                                                                                | 1.17.96              | 1.17.96              |          |
| 45 | git+http://github.com/EXASOL/websocket-api.git#egg=exasol-db-api&subdirectory=python | No version specified | No version specified |          |
| 46 | google-cloud-asset                                                                   | 3.1.0                | 3.1.0                |          |
| 47 | google-cloud-bigquery                                                                | 2.20.0               | 2.20.0               |          |
| 48 | google-cloud-bigquery-storage                                                        | 2.4.0                | 2.4.0                |          |
| 49 | google-cloud-bigtable                                                                | 2.2.0                | 2.2.0                |          |
| 50 | google-cloud-containeranalysis                                                       | 2.3.0                | 2.3.0                |          |
| 51 | google-cloud-datacatalog                                                             | 3.2.1                | 3.2.1                |          |
| 52 | google-cloud-datastore                                                               | 2.1.3                | 2.1.3                |          |
| 53 | google-cloud-firestore                                                               | 2.1.3                | 2.1.3                |          |
| 54 | google-cloud-kms                                                                     | 2.3.0                | 2.3.0                |          |
| 55 | google-cloud-logging                                                                 | 2.5.0                | 2.5.0                |          |
| 56 | google-cloud-monitoring                                                              | 2.2.1                | 2.2.1                |          |
| 57 | google-cloud-ndb                                                                     | 1.9.0                | 1.9.0                |          |
| 58 | google-cloud-pubsub                                                                  | 2.5.0                | 2.5.0                |          |
| 59 | google-cloud-spanner                                                                 | 3.5.0                | 3.5.0                |          |
| 60 | google-cloud-storage                                                                 | 1.38.0               | 1.38.0               |          |
| 61 | google-cloud-trace                                                                   | 1.2.0                | 1.2.0                |          |
| 62 | grafeas                                                                              | 1.4.0                | 1.4.0                |          |
| 63 | martian                                                                              | 1.4                  | 1.4                  |          |
| 64 | pyexasol                                                                             | 0.20.0               | 0.20.0               |          |
| 65 | pykickstart                                                                          | 3.33                 | 3.33                 |          |
| 66 | pysftp                                                                               | 0.2.9                | 0.2.9                |          |
| 67 | pytz                                                                                 | 2021.1               | 2021.1               |          |
| 68 | sagemaker                                                                            | 2.59.5               | 2.59.5               |          |